--- a/NextJs/building-managemant/src/app/page.module.css
+++ b/NextJs/building-managemant/src/app/page.module.css
@@ -1,3 +1,12 @@
+.border{
+  border: 1px solid white;
+  border-collapse: collapse;
+}
+
+.bold{
+  font-weight: bold;
+}
+
 .red {
   color: red;
 }
